<resources>
    <string name="app_name">KotlinPlayGround</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_customer">Customer</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_name">Name *</string>
    <string name="customer_mobile_number">Primary Number / WhatsApp Number *</string>
    <string name="register_billing_area">Billing Area</string>
    <string name="customer_billing_name">Billing Name</string>
    <string name="customer_eb_number">EB Number</string>
    <string name="customer_email">Email</string>
    <string name="customer_address">Address</string>
    <string name="customer_code">Customer code *</string>
    <string name="pan_number">PAN Number</string>
    <string name="customer_aadhar_number">Aadhar Number</string>
    <string name="customer_contact_details">Contact Details</string>
    <string name="customer_general_details">General Details</string>
    <string name="customer_address_details">Address Details</string>
    <string name="customer_other_details">Other Details</string>
    <string name="customer_street">Street</string>
    <string name="show_more_details">+ Show More Details</string>
    <string name="hide_more_details">- Hide More Details</string>
    <string name="area">Area *</string>
    <string name="street">Street *</string>
    <string name="more_details">More Detials</string>
    <string name="mobile_number_2">Mobile Number 2</string>
    <string name="Show_Box_Details">+ Show Set top Box Details</string>
    <string name="show_billing_detail">+ Show Billing Details</string>
    <string name="hide_billing_details">- Hide Billing Details</string>
    <string name="hide_Box_Details">- Hide Set top Box Details</string>
    <string name="box_details">Set top Box Details</string>
    <string name="box_no">Set top Box No</string>
    <string name="box_type">Set top Box Type</string>
    <string name="box_amount">Set top Box Amount</string>
    <string name="security_deposite">Security Deposite</string>
    <string name="mso_name">Mso Name</string>
    <string name="box_name">Set top Box Name</string>
    <string name="customer_home">Home Type*</string>

    <string name="billing_details">Billing Details</string>
    <string name="billing_type">Bill Type</string>
    <string name="billing_time">Billing Time</string>
    <string name="additional_charge">Additional Charge / Discount</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
    <string name="upload_aadhar">Upload Aadhar</string>
    <string name="add">+ Add</string>
    <string name="Please_Enter_Any_one_Details">Please Enter Any one Details</string>
    <string name="smart_card_no">Smart Card No</string>
    <string name="registration_details">Entry Date Details</string>
    <string name="connection_date">Connection Date</string>
    <string name="release_date">Release Date</string>
    <string name="registered_date">Registered Date</string>
    <string name="attach_file">Attach file</string>
    <string name="_0_will_be_added_to_every_bill">0 will be added to every bill.</string>
    <string name="AuthLoginWelcomeString">Welcome</string>
    <string name="AuthLoginPasswordString">Password</string>
    <string name="AuthLoginSignInString">Sign in</string>
    <string name="AuthLoginMobileNullString">Enter Mobile Name</string>
    <string name="AuthLoginUPasswordNullString">Enter Password</string>
    <string name="ServerBusyString">Server Busy Please Try Again </string>
    <string name="SessionTokenExpire">Session Token Expire</string>

    <string name="ImageUploadString">Image Upload</string>
    <string name="CaptureImageUploadString">Capture Image</string>
    <string name="ChooseImageUploadString">Choose Image</string>
    <string name="CabelSoft">Cabel Soft</string>
    <string name="DialogOkString">Okay</string>
    <string name="DialogCancelString">Cancel</string>
    <string name="DialogLogoutString">Are you sure logout?</string>
    <string name="DialogDeleteString">Are you sure delete?</string>
    <string name="ExpenseDeatilsString">Expense Details</string>
    <string name="AddExpenseString">Add Expense</string>
    <string name="ViewExpenseString">Expense Details</string>
    <string name="ExpenseDetailsString">Expense Details</string>
    <string name="ProfileDetailsString">Profile Details</string>
    <string name="EditExpenseDetailsString">Edit Expense</string>
    <string name="ExpenseEditString">Edit</string>
    <string name="ExpenseCancelString">Cancel</string>
    <string name="AddExpenseTypeString">Expense Type</string>
    <string name="updateProfileMobileString">Mobile Number</string>
    <string name="updateProfileContactMobileString">Office Contact Number</string>
    <string name="AddExpenseCommentString">Expense Comment</string>
    <string name="AddExpenseAmountString">Expense Amount</string>
    <string name="updateProfileownerNameString">Owner Name</string>
    <string name="updateProfileAgencyNameString">Agency Name</string>
    <string name="updateProfileBtnString">Update</string>
    <string name="updateProfileAddressString">Address</string>
    <string name="updateProfileGstString">GST Number</string>
    <string name="AddExpenseDateString">Expense Date</string>
    <string name="AddExpenseAddString">Add Expense</string>
    <string name="EditExpenseAddString">Edit Expense</string>
    <string name="AddExpenseTypeNullString">Enter Expense Type</string>
    <string name="AddExpenseCommentNullString">Enter Expense Comment</string>
    <string name="AddExpenseAmountNullString">Enter Expense Amount</string>
    <string name="AddExpenseDateNullString">Enter Expense Date</string>

    <string name="updateNomineeDetailsHintString">Nominee Details</string>
    <string name="updateNomineeNameString">Name</string>
    <string name="updateNomineePhoneNumberString">Phone Number</string>
    <string name="updateNomineeAddressString">Address</string>
    <string name="updateNomineeRelationshipString">Relation with Nominee</string>

    <string name="updateBankDetailsHintString">Bank Details</string>
    <string name="updateProofDetailsHintString">Proof Details</string>
    <string name="updateBankAccountNumberString">Account Number</string>
    <string name="updateBankIfscCodeString">IFSC Code</string>
    <string name="updateBankAccountHolderNameString">Account holder name</string>

    <string name="updateBankPanCardString">PAN *</string>
    <string name="updateBankPanCardPhotoString">PAN Card </string>

    <string name="updateBankAddressproofString">Address Proof *</string>
    <string name="updateBankAddressProofPhotoString">Address </string>


    <string name="updateProfileMobileNullString">Enter Mobile Number</string>
    <string name="updateProfileofficeContactNullString">Enter Office Contact Number</string>
    <string name="updateProfileOwnerNameNullString">Enter Owner Name</string>
    <string name="updateProfileAgencyNameNullString">Enter Agency Name</string>
    <string name="updateProfileAddressNullString">Enter Address Name</string>
    <string name="updateProfileGstNumberNullString">Enter GST Number</string>


    <string name="updateNomineeNameNullString">Enter Nominee Name</string>
    <string name="updateNomineePhoneNullString">Enter Nominee Phone Number</string>
    <string name="updateNomineeAddressNullString">Enter Nominee Address</string>
    <string name="updateNomineeRelationNullString">Enter Nominee Relation</string>

    <string name="updateBankAccountNoNullString">Enter Account Number</string>
    <string name="updateBankIfscNullString">Enter IFSC Code</string>
    <string name="updateBankAccountHolderNameNullString">Enter Account Holder Name</string>


</resources>
