<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customImageDialogTileHintTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_15sdp"
        android:text="@string/ImageUploadString"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customImageDialogCaptureImageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/CaptureImageUploadString"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customImageDialogTileHintTv" />

    <View
        android:id="@+id/customImageDialogView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@+id/customImageDialogCaptureImageTv" />

    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customImageDialogUploadImageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/ChooseImageUploadString"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customImageDialogView" />

</androidx.constraintlayout.widget.ConstraintLayout>