<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customDialogTileHintTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/CabelSoft"
        android:textColor="@color/colorSecondartDark"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customDialogPositiveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/DialogOkString"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDialogTileHintTv" />

    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/customDialogNegativeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/DialogCancelString"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintLeft_toRightOf="@+id/customDialogPositiveTv"
        app:layout_constraintTop_toBottomOf="@+id/customDialogTileHintTv" />


</androidx.constraintlayout.widget.ConstraintLayout>