<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <absa.cgs.com.utils.fonts.CustomTextView
        android:id="@+id/AuthLoginWelcomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="left"
        android:text="@string/AuthLoginWelcomeString"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputAuthLoginPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:hint="@string/customer_mobile_number"
        android:padding="5dp"
        android:textColorHint="@color/colorGray55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthLoginWelcomeTv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed">

        <absa.cgs.com.utils.fonts.CustomTextEditText
            android:id="@+id/TextEditAuthLoginPhoneNumberEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textCapWords"
            android:maxLength="10"
            android:textColor="@color/colorGray55"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputAuthLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:hint="@string/AuthLoginPasswordString"
        android:padding="5dp"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputAuthLoginPhoneNumber">

        <absa.cgs.com.utils.fonts.CustomTextEditText
            android:id="@+id/TextEditAuthLoginPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="10"
            android:textColor="@color/colorGray"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <absa.cgs.com.utils.fonts.CustomButton
        android:id="@+id/AuthLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/custom_login_button_style"
        android:text="@string/AuthLoginSignInString"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondartDark"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>