<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="absa.cgs.com.ui.screens.register.CustomerRegister">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textCapWords"
                android:textColor="@color/colorBlack"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_login_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_login_name">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_login_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_mobile_number"
                android:inputType="number|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_billing_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_login_phone_number">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_billing_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_billing_area"
                android:inputType="text|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_billing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_billing_area">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_billing_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_billing_name"
                android:inputType="text|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_cs_billing_name">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_email"
                android:inputType="textEmailAddress|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_cs_emailid">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_address"
                android:inputType="text|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_cs_address">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_code"
                android:inputType="text|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_cs_code">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pan_number"
                android:inputType="text|textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_register_cs_aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="5dp"
            android:textColorHint="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_register_cs_pan">

            <absa.cgs.com.utils.fonts.CustomTextEditText
                android:id="@+id/textedit_register_cs_aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_aadhar_number"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
